--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
@@ -80,6 +80,12 @@
                         <span class="link-title">Room Management</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="/partner/bookings" class="nav-link">
+                        <i class="link-icon" data-feather="shopping-cart"></i>
+                        <span class="link-title">Booking Management</span>
+                    </a>
+                </li>
 
                 <li class="nav-item">
                     <a class="nav-link" data-bs-toggle="collapse" href="#events" role="button" aria-expanded="false"
