--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_user.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_user.html
@@ -216,6 +216,15 @@
 
     </div>
 
+    <!--LOADING-->
+    <!-- Lớp overlay để làm mờ nền xung quanh -->
+    <div class="overlay"></div>
+
+    <!-- Thẻ div để hiển thị vòng xoay loading trong Bootstrap -->
+    <div id="loading">
+        <div class="spinner-border" role="status">
+        </div>
+    </div>
 
 </div>
 
