--- a/FINAL/travel-booking/src/main/resources/templates/management/partner/room-management.html
+++ b/FINAL/travel-booking/src/main/resources/templates/management/partner/room-management.html
@@ -135,7 +135,7 @@
             </div>
         </div>
 
-        //PAGINATION
+<!--        //PAGINATION-->
         <div aria-label="Page navigation" class="d-flex justify-content-center">
             <ul class="pagination">
                 <!-- Previous button -->
