--- a/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
+++ b/FINAL/travel-booking/src/main/resources/templates/layout/layout_dashboard_partner.html
@@ -225,7 +225,15 @@
 
     </div>
 
+    <!--LOADING-->
+    <!-- Lớp overlay để làm mờ nền xung quanh -->
+    <div class="overlay"></div>
 
+    <!-- Thẻ div để hiển thị vòng xoay loading trong Bootstrap -->
+    <div id="loading">
+        <div class="spinner-border" role="status">
+        </div>
+    </div>
 </div>
 
 <!-- CONFIRM DELETE MODAL -->
